tests/NormalTests/paczka1/fuzzy1/13232700.err
Error in line 6: 6gW S686 79,2
Error in line 4: vexIf A756 77,2
Error in line 7: 6gW A806 24,1
Error in line 15: vexIf S686 45,10
Error in line 8: vexIf S686 17,1
Error in line 10: 6gW A756 85,8
Error in line 1: uO6sBZ A806 10,2
Error in line 36: S686 A839 65,7
